--- a/css/style.css
+++ b/css/style.css
@@ -119,35 +119,21 @@ body {
 }
 
 .container .data-container form .label-file img {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
 }
 
 .container .data-container form .label-file:hover img {
-  -webkit-animation: scale 0.6s infinite alternate ease-in-out;
-          animation: scale 0.6s infinite alternate ease-in-out;
-}
-
-@-webkit-keyframes scale {
-  0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-  100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-  }
-}
-
-@keyframes scale {
-  0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-  }
-  100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-  }
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
 .container .data-container form button {
@@ -161,6 +147,51 @@ body {
 
 .container .data-container form button:hover {
   background: #396ef4;
+}
+
+.container .data-container form a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  gap: 10px;
+  border-radius: 6px;
+  background: #fff;
+  color: #666666;
+  cursor: pointer;
+  padding: 16px;
+  margin-top: 15px;
+  text-decoration: none;
+  -webkit-transition: background 0.3s;
+  transition: background 0.3s;
+}
+
+.container .data-container form a img {
+  -webkit-transform: rotate(180deg) translateY(0px);
+          transform: rotate(180deg) translateY(0px);
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.container .data-container form a:hover {
+  background: #f7f9ff;
+}
+
+.container .data-container form a:hover img {
+  -webkit-transform: translateY(10px) rotate(180deg);
+          transform: translateY(10px) rotate(180deg);
 }
 
 .container .result-container {
