--- a/css/style.scss
+++ b/css/style.scss
@@ -113,23 +113,16 @@ body {
                 margin-top: 15px;
 
                 img {
-                    transition: all 0.3s;
+                    transition: transform 0.3s;
+                    transform:translateY(0px);
                 }
 
                 &:hover img {
-                    //transform: scale(1.2);
-                    animation: scale 0.6s infinite alternate ease-in-out;
+                    transform: translateY(-10px);
+                    transition: transform 0.3s;
                 }
 
-                @keyframes scale {
-                    0% {
-                        transform: scale(1);
-                    }
-
-                    100% {
-                        transform: scale(1.2);
-                    }
-                }
+    
 
             }
 
@@ -142,6 +135,36 @@ body {
 
                 &:hover {
                     background: $acent-primary-color;
+                }
+            }
+
+            a{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                text-align: center;
+                gap: 10px;
+                border-radius: 6px;
+                background: $white-color;
+                color: $text-color;
+                cursor: pointer;
+                padding: 16px;
+                margin-top: 15px;
+                text-decoration: none;
+                transition: background 0.3s;
+
+                img{
+                    transform: rotate(180deg) translateY(0px);
+                    transition: transform 0.3s;
+                }
+
+                &:hover {
+                    background: $primary-color-light;
+
+                    img{
+                        transform: translateY(10px) rotate(180deg);
+                    }
                 }
             }
 
